Add more spells to shop